Modify reporter dir

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Generate HTML Report from BLOB report
       id: get_html_report
       run: |
-        npx playwright show-report --report-dir ${{steps.Run_tests.outputs.blob_report_dir}}
+        npx playwright show-report  ${{steps.Run_tests.outputs.blob_report_dir}}
         echo "html_report_dir=${{steps.Run_tests.outputs.blob_report_dir}}" >>$GITHUB_OUTPUT
     - name: Upload PLaywright report
       if: always()
