--- a/.github/workflows/blobreports.yml
+++ b/.github/workflows/blobreports.yml
@@ -1,35 +1,61 @@
-name: Playwright Tests
+name: Playwright blob report
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 jobs:
-  playwright-tests:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        shardIndex: [1, 2, 3, 4]
-        shardTotal: [4]
-    steps:
-    - uses: actions/checkout@v5
-    - uses: actions/setup-node@v5
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright browsers
-      run: npx playwright install --with-deps
+    Create-Blob-report:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                shard-Index: [1,2,3,4]
+                shard-Total: [4]
+        steps:
+        -  uses: actions/checkout@v5
+        -  uses: actions/setup-node@v5
+           with:
+            node-version: lts/*
+        -  name: Install dependencies
+           run: npm ci
+        -  name: Install playwright browsers
+           run: npx playwright install -with-deps
+        -  name: Run Playwright test
+           run: npx playwright test --shard=${{ matrix.shard-Index}} /${{matrix.shard-Total}}
+        -  name: Upload Playwright artifact
+           if: ${{ !cancelled() }}
+           uses: actions/upload-artifact@v4
+           with:
+            name: blob-report-${{matrix.shard-Index}}
+            path: blob-report
+    Download-Blob-report:
+        if: ${{!cancelled()}}
+        needs: Create-Blob-report
+        runs-on: Ubuntu-latest
+        steps:
+        -  uses: actions/checkout@v5
+        -  uses: actions/setup-node@v5
+           with:
+                node-version: lts/*
+        - name: Install depencies
+          run: npm ci
+        - name: Download Blob report from gihub actions artifacts
+          uses: actions/download-artifact@v5
+          with:
+            path: all-blob-reports
+            pattern: blob-report-*
+            merge-multiple: true
+        - name: Merge into HTML Report
+          run: npx playwright merge-reports --reporter html ./all-blob-reports
+        - name: Upload HTML report
+          uses: actions/upload-artifact@v4
+          with:
+            name: html-report-attempt-${{github.run_attempt}}
+            path: playwright-report
 
-    - name: Run Playwright tests
-      run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
 
-    - name: Upload blob report to GitHub Actions Artifacts
-      if: ${{ !cancelled() }}
-      uses: actions/upload-artifact@v4
-      with:
-        name: blob-report-${{ matrix.shardIndex }}
-        path: blob-report
-        retention-days: 1
+
+
+
+
+
