--- a/.github/workflows/blobreports.yml
+++ b/.github/workflows/blobreports.yml
@@ -19,7 +19,7 @@ jobs:
         -  name: Install dependencies
            run: npm ci
         -  name: Install playwright browsers
-           run: npx playwright install -with-deps
+           run: npx playwright install --with-deps
         -  name: Run Playwright test
            run: npx playwright test --shard=${{ matrix.shard-Index}} /${{matrix.shard-Total}}
         -  name: Upload Playwright artifact
