--- a/.github/workflows/mainPlay.yml
+++ b/.github/workflows/mainPlay.yml
@@ -48,5 +48,5 @@ jobs:
           to: ${{ secrets.MAIL_TO }}
           from: ${{ secrets.MAIL_USERNAME }}
           secure: true
-          body: "Hi Team,<br><br>Attached is the Playwright test report for the latest run.<br><br>Regards,<br>GitHub Actions"
+          body: "Hi Team,<br><br>Attached is the playwright test report for the latest run.<br><br>Regards,<br>GitHub Actions"
           attachments: report.zip
