--- a/.github/workflows/mainPlay.yml
+++ b/.github/workflows/mainPlay.yml
@@ -41,7 +41,7 @@ jobs:
           server_port: ${{ secrets.MAIL_PORT }}
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "Playwright Test Report 
+          subject: "Playwright Test Report"
           to: ${{ secrets.MAIL_TO }}
           from: ${{ secrets.MAIL_USERNAME }}
           secure: true
