--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "url": "https://github.com/Anju-AU/playwrightTest/issues"
   },
   "homepage": "https://github.com/Anju-AU/playwrightTest#readme",
-  "description": "",
   "devDependencies": {
     "@playwright/test": "^1.56.0",
     "@types/node": "^24.7.0"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "node-mailer": "^0.1.1",
+    "playwright": "^1.56.0",
+    "playwright-core": "^1.56.0",
+    "undici-types": "^7.14.0"
+  },
+  "description": ""
 }
